[tool.poetry]
name = "python-tools"
version = "0.1.0"
description = ""
authors = ["Gaétan Rigaut <gaetanrigaut.s@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_tools" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.260"
pre-commit = "^3.2.2"
interrogate = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
fail-under = 100
exclude = ["setup.py", "docs", "build", "tests", "sandbox"]
verbose = 1
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
